<resources>
    <string name="app_name">Teklipyaz</string>
    <string name="app_description">Travel. Have fun. Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_common_settings">Common</string>
    <string name="action_information">Information</string>
    <string name="app_about_application">About project</string>
    <string name="app_email">info@teklipyaz.com</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_lang">Language</string>
    <string name="pref_lang_tk">Türkmençe</string>
    <string name="pref_lang_ru">Русский</string>
    <string name="pref_lang_en">English</string>
    <string name="cancel">Cancel</string>
    <string name="pref_email">Email</string>
    <string name="pref_version">Version</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_no_data">No data found</string>

    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="city">City</string>
    <string name="minimum_input_number_string">Minimum 3 symbols for search</string>
    <string name="double_click_to_exit">Please click BACK again to exit</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="loading">Loading</string>

    <string name="places">Places</string>
    <string name="events">Events</string>
    <string name="blog">Blog</string>
    <string name="catalog">Catalog</string>
    <string name="home">Home</string>
</resources>
