<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.preference.PreferenceCategory
        android:key="header_common_preference"
        android:title="@string/action_common_settings"
        android:layout="@layout/preferences_category_header">
        <ListPreference
            android:key="city_preference"
            android:title="@string/city"
            android:summary=""
            android:negativeButtonText="@string/cancel"
            android:layout="@layout/preferences_header"/>

        <ListPreference
            android:key="language_preference"
            android:title="@string/pref_lang"
            android:summary=""
            android:entries="@array/Language"
            android:entryValues="@array/languageAlias"
            android:negativeButtonText="@string/cancel"
            android:layout="@layout/preferences_header"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="header_info_preference"
        android:title="@string/action_information"
        android:layout="@layout/preferences_category_header">
        <Preference
            android:key="email_preference"
            android:title="@string/pref_email"
            android:autoLink="email"
            android:summary="@string/app_email"
            android:layout="@layout/preferences_header"/>

        <Preference
            android:key="version_preference"
            android:title="@string/pref_version"
            android:summary=""
            android:persistent="false"
            android:selectable="false"
            android:layout="@layout/preferences_header"/>

        <Preference
            android:key="about_preference"
            android:title="@string/app_about_application"
            android:summary=""
            android:persistent="false"
            android:layout="@layout/preferences_header"/>
    </android.support.v7.preference.PreferenceCategory>
    <!--<android.support.v7.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_menu_camera"
            android:key="key1"
            android:title="Switch Preference"
            android:defaultValue="true" />

        <android.support.v7.preference.EditTextPreference
            android:key="key2"
            android:title="EditText Preference"
            android:summary="EditText Summary"
            android:dialogMessage="Dialog Message"
            android:defaultValue="Default value" />

        <android.support.v7.preference.CheckBoxPreference
            android:key="key3"
            android:title="CheckBox Preference"
            android:summary="CheckBox Summary"
            android:defaultValue="true"/>-->

        <!--</android.support.v7.preference.PreferenceCategory>-->

</android.support.v7.preference.PreferenceScreen>