<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_home"
    tools:context="com.android.teklipyaz.views.activities.HomeActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/bg_header">
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="260dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            android:orientation="horizontal"
                            android:layout_marginBottom="5dp">
                            <android.support.v7.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity = "center"
                                android:orientation="vertical">
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clickable="true"
                                    android:background="@drawable/bg_btn_home_place"
                                    android:drawableTop="@drawable/ic_home_place"
                                    android:paddingBottom="10dp"
                                    android:paddingTop="20dp"
                                    android:text="@string/places"
                                    android:id="@+id/btnPlace"
                                    android:textColor="@color/colorWhite" />
                            </android.support.v7.widget.CardView>
                            <android.support.v7.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity = "center"
                                android:layout_marginLeft="5dp"
                                android:orientation="vertical">
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clickable="true"
                                    android:background="@drawable/bg_btn_home_event"
                                    android:drawableTop="@drawable/ic_home_event"
                                    android:paddingBottom="10dp"
                                    android:paddingTop="20dp"
                                    android:text="@string/events"
                                    android:id="@+id/btnEvent"
                                    android:textColor="@color/colorWhite" />
                            </android.support.v7.widget.CardView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp">
                            <android.support.v7.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity = "center"
                                android:orientation="vertical">
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clickable="true"
                                    android:background="@drawable/bg_btn_home_blog"
                                    android:drawableTop="@drawable/ic_home_blog"
                                    android:paddingBottom="10dp"
                                    android:paddingTop="20dp"
                                    android:text="@string/blog"
                                    android:id="@+id/btnBlog"
                                    android:textColor="@color/colorWhite" />
                            </android.support.v7.widget.CardView>
                            <android.support.v7.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity = "center"
                                android:layout_marginLeft="5dp"
                                android:orientation="vertical">
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clickable="true"
                                    android:background="@drawable/bg_btn_home_catalog"
                                    android:drawableTop="@drawable/ic_home_catalog"
                                    android:paddingBottom="10dp"
                                    android:paddingTop="20dp"
                                    android:text="@string/catalog"
                                    android:id="@+id/btnCatalog"
                                    android:textColor="@color/colorWhite" />
                            </android.support.v7.widget.CardView>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/bottom_menu_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/footer_settings" />
    </FrameLayout>
</LinearLayout>